<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_black_24dp"
            android:title="@string/nav_profile"/>
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/nav_categories"/>

        <item
            android:id="@+id/nav_my_job"
            android:icon="@drawable/ic_memory_black_24dp"
            android:title="@string/nav_my_job"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_reply_black_24dp"
            android:title="@string/nav_logout"/>
    </group>
</menu>