<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:layout_gravity="center"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/text_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:background="@drawable/circle_background"
        android:gravity="center"
        android:text="@string/popup_close_btn_text"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/person"
        android:contentDescription="@string/content_des_icon"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/userType_question_label"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp">

        <RadioButton
            android:id="@+id/employee_radioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/radio_btn_background"
            android:drawablePadding="20dp"
            android:paddingStart="10dp"
            android:text="@string/employee_label"
            android:textColor="@drawable/radio_btn_colortext"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <RadioButton
            android:id="@+id/company_radioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/radio_btn_background"
            android:drawablePadding="20dp"
            android:paddingStart="10dp"
            android:text="@string/company_label"
            android:textColor="@drawable/radio_btn_colortext"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_stroke_background"
        android:text="@string/next_btn_text"
        android:textColor="@color/colorWhite" />
</LinearLayout>