<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fillViewport="true"
    android:padding="8dp"
    tools:context=".Activities.AddNewJobActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <EditText
                android:id="@+id/job_title"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/ic_title_black_24dp"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/position_title_label"
                android:inputType="text" />


            <RelativeLayout
                android:id="@+id/jobSpinnerLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/job_title"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="4dp">

                <TextView
                    android:id="@+id/categoryName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/jobSpinner"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    app:ms_arrowColor="@color/colorBlack"
                    app:ms_arrowSize="16dp"
                    app:ms_floatingLabelColor="@color/colorBlack"
                    app:ms_floatingLabelText="Category:"
                    app:ms_hint="Choose Only One Category..."
                    app:ms_hintColor="#A9A9A9"
                    app:ms_multiline="true" />

            </RelativeLayout>

            <EditText
                android:id="@+id/job_vacancies_num"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/jobSpinnerLayout"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/ic_filter_num_black_24dp"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/vacancies_num_label"
                android:inputType="number" />

            <LinearLayout
                android:id="@+id/yearExpLayout"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/job_vacancies_num"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_year_black_24dp"
                    android:text="@string/year_experience_label"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/min"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="30dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/min_label"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/max"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/max_label"
                        android:inputType="number" />
                </LinearLayout>
            </LinearLayout>

            <EditText
                android:id="@+id/salary"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/yearExpLayout"
                android:layout_marginBottom="10dp"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/salary_label"
                android:inputType="text" />

            <EditText
                android:id="@+id/degree_level"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/salary"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/ic_layers_black_24dp"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/degree_label"
                android:inputType="text" />

            <RelativeLayout
                android:id="@+id/job_type_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/degree_level"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="4dp">

                <TextView
                    android:id="@+id/job_type_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/jobTypeSpinner"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    app:ms_arrowColor="@color/colorBlack"
                    app:ms_arrowSize="16dp"
                    app:ms_floatingLabelColor="@color/colorBlack"
                    app:ms_floatingLabelText="JobType:"
                    app:ms_hint="Choose JobType ..."
                    app:ms_hintColor="#A9A9A9"
                    app:ms_multiline="true" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/applied_gender_layout"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/job_type_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:drawableStart="@drawable/ic_wc_black_24dp"
                    android:text="@string/apply_gender_label"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/job_gender_radio_group"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/male_radioBtn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@drawable/radio_btn_background"
                        android:paddingStart="10dp"
                        android:text="@string/male_label"
                        android:textColor="@drawable/radio_btn_colortext_2"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/female_radioBtn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@drawable/radio_btn_background"
                        android:paddingStart="10dp"
                        android:text="@string/female_label"
                        android:textColor="@drawable/radio_btn_colortext_2"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/both_radioBtn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@drawable/radio_btn_background"
                        android:paddingStart="10dp"
                        android:text="@string/gender_both_label"
                        android:textColor="@drawable/radio_btn_colortext_2"
                        android:textSize="14sp" />
                </RadioGroup>
            </LinearLayout>

            <EditText
                android:id="@+id/nationality"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/applied_gender_layout"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/nationality_label"
                android:inputType="text" />

            <EditText
                android:id="@+id/applied_age"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nationality"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/age_hint"
                android:inputType="text" />

            <LinearLayout
                android:id="@+id/job_location_layout"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/applied_age"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_location_on_black_24dp"
                    android:text="@string/location_label"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/jobCountry"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="30dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/country_label"
                        android:inputType="text" />

                    <EditText
                        android:id="@+id/jobCity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/city_label"
                        android:inputType="text" />
                </LinearLayout>
            </LinearLayout>

            <EditText
                android:id="@+id/expiry_date"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/job_location_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="4dp"
                android:drawableEnd="@drawable/ic_date_range_black_24dp"
                android:ems="10"
                android:hint="@string/expiry_date_label"
                android:inputType="date" />

            <LinearLayout
                android:id="@+id/job_desc_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/expiry_date"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_sum_linear_black_24dp"
                    android:text="@string/job_description_label"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/job_description"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:hint="@string/job_des_hint"
                    android:inputType="textCapSentences|textMultiLine"
                    android:lines="4"
                    android:scrollbars="vertical" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/job_req_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/job_desc_layout"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_format_list_black_24dp"
                    android:text="@string/job_requirement_label"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/job_requirement"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:hint="@string/job_req_hint"
                    android:inputType="textCapSentences|textMultiLine"
                    android:lines="4"
                    android:scrollbars="vertical" />
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_below="@+id/job_req_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:elevation="8dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="25dp">

                <RelativeLayout
                    android:id="@+id/post_job_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/text_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/post_job_btn_text"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </RelativeLayout>
    </LinearLayout>
</ScrollView>